--- a/assets/stylesheets/sections/_carousel.scss
+++ b/assets/stylesheets/sections/_carousel.scss
@@ -3,16 +3,16 @@
 	color: $grey_text;
 }
 [data-ur-carousel-component="button"] {
-	//height: 35%;
 	width: 25px;
 	z-index: 25;
 	background: $grey_background;	
 	position: absolute;
-	padding: 5px;
 }
 [data-ur-carousel-button-type="prev"] {
-	left: 0;
+	left: -1px;
+	padding-left: 5px;
 }
 [data-ur-carousel-button-type="next"] {
-	right: 0;
+	right: -5px;
+	padding-left: 12px;
 }
